plugins/editorconfig/testData/org/editorconfig/language/highlighting/error/valueWithSpaces/.editorconfig
[*.cs]
file_header_template = This file is subject to copyright!!!